--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -67,9 +67,43 @@ The academic and industry research community has responded by developing enhance
 
 \section{Technical Background}
 
+Password managers rely on a combination of modern cryptography, secure key-management protocols, and architectural design principles to protect user credentials at scale. This section provides an overview of the core technical mechanisms that enable secure password storage, focusing on (1) encryption methods, (2) master password protocols and key derivation, and (3) architectural differences between local and cloud-based systems.
+
 \subsection{Encryption Methods}
-\subsection{Master Password Protocols}
-\subsection{Architecture: Local vs Cloud-Based Solutions}
+At the foundation of every password manager is an encrypted vault that stores sensitive user data, including login credentials, secure notes, credit-card information, and identity documents. Modern password managers typically protect this vault using symmetric-key cryptography, most commonly the Advanced Encryption Standard (AES), and specifically AES-256 in Galois/Counter Mode (GCM) for both confidentiality and integrity guarantees \cite{ferguson2010cryptography}.
+
+AES-256 encryption is performed entirely on the user's device. Cloud-based password managers do not receive plaintext data; instead, they store only ciphertext produced locally on the client. This design supports a \emph{zero-knowledge} security model, meaning the service provider cannot access vault contents even if the provider is compromised. The overall strength of AES encryption depends directly on the secrecy and strength of the encryption key that unlocks the vault, which is derived from the user’s master password through secure key-derivation mechanisms.
+
+\subsection{Master Password Protocols and Key Derivation}
+Users cannot reasonably memorize or provide a 256-bit cryptographic key directly. Instead, password managers employ a \emph{Key Derivation Function} (KDF) to transform a human-chosen master password into a strong, high-entropy encryption key. Common KDF algorithms include PBKDF2, scrypt, and the more modern Argon2id \cite{bonneau2012science, argon2spec}.
+
+KDFs strengthen a potentially weak or guessable password by applying:
+\begin{itemize}
+    \item a randomly generated salt,
+    \item a large number of computational iterations,
+    \item memory-hard operations (in the case of Argon2).
+\end{itemize}
+
+The derived key is then used as the AES-256 encryption key for the vault. The derivation workflow can be summarized as follows:
+\[
+\begin{aligned}
+\text{Master Password} &\xrightarrow{\text{KDF (e.g., PBKDF2/Argon2)}} \text{256-bit Key} \\
+\text{256-bit Key} &\xrightarrow{\text{AES-256}} \text{Decrypted Vault}
+\end{aligned}
+\]
+
+A strong KDF significantly increases the cost of brute-force attacks, even when attackers obtain an encrypted vault file. The importance of rigorous key derivation was highlighted in the 2022 LastPass breach, where inadequate PBKDF2 iteration counts in older accounts made certain vaults more susceptible to offline cracking attempts.
+
+\subsection{Architectural Differences: Local vs.~Cloud-Based Password Managers}
+Password managers vary in how they store and synchronize encrypted vaults. Broadly, they fall into two categories: \emph{local-only} and \emph{cloud-synchronized} systems.
+
+\subsubsection*{Local-Only Password Managers}
+Tools such as KeePass store the encrypted vault exclusively on a user’s device. Synchronization, if desired, must be performed manually through file transfer methods such as USB drives or cloud storage services like Dropbox or Google Drive. This model reduces dependence on third-party providers and minimizes cloud-related attack surfaces, but places greater responsibility on the user to maintain backups and manage multi-device access.
+
+\subsubsection*{Cloud-Based Password Managers}
+Cloud-based systems, including Bitwarden, 1Password, LastPass, and Dashlane, automatically synchronize encrypted vaults across all user devices. All encryption and decryption occur locally, and only ciphertext (along with encrypted synchronization metadata) is uploaded to the provider’s servers. This design enables \emph{end-to-end encrypted synchronization}, where providers store but cannot decrypt user data.
+
+Cloud synchronization enhances usability and multi-device access but introduces additional risks, including cloud breaches, account compromise, and metadata exposure. Nonetheless, strong client-side encryption and proper key derivation significantly mitigate these risks.
 
 \section{Comparative Analysis}
 
@@ -182,6 +216,19 @@ LastPass, ``Notice of recent security incident,'' Dec. 22, 2022. [Online]. Avail
 Bitwarden Inc., ``About Bitwarden,'' Company web page, 2023. [Online]. Available: https://bitwarden.com/about/. Accessed: Nov. 12, 2025.
 \bibitem{dashlane2023}
 Dashlane Inc., ``Company overview,'' Company web page, 2023. [Online]. Available: https://www.dashlane.com/about. Accessed: Nov. 12, 2025.
+\bibitem{ferguson2010cryptography}
+N.~Ferguson, B.~Schneier, and T.~Kohno,
+\emph{Cryptography Engineering}.
+Wiley, 2010.
+\bibitem{bonneau2012science}
+J.~Bonneau,
+``The science of guessing: Analyzing an anonymized corpus of 70 million passwords,''
+in \emph{Proceedings of the IEEE Symposium on Security and Privacy},
+2012.
+\bibitem{argon2spec}
+A.~Biryukov, D.~Dinu, and D.~Khovratovich,
+``Argon2: The memory-hard function for password hashing and other applications,''
+Password Hashing Competition Report, 2016.
 \end{thebibliography}
 
 \end{document}
