--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -88,7 +88,7 @@ The derived key is then used as the AES-256 encryption key for the vault. The de
 \[
 \begin{aligned}
 \text{Master Password} &\xrightarrow{\text{KDF (e.g., PBKDF2/Argon2)}} \text{256-bit Key} \\
-\text{256-bit Key} &\xrightarrow{\text{AES-256}} \text{Decrypted Vault}
+\text{256-bit Key} &\xrightarrow{\text{AES-256}} \text{Encrypt/Decrypt Vault}
 \end{aligned}
 \]
 
